--- a/app/assets/stylesheets/pages/_stations_index.scss
+++ b/app/assets/stylesheets/pages/_stations_index.scss
@@ -30,6 +30,7 @@
   .stations-searchbar {
     width: 85%;
     margin-left: 4px;
+    margin-top: 2vh;
   }
 
   #section-stations-container {
